# chore-tracker

./: .gitignore  .tidyignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  WEEKLY_CHORE_FIX.md  docker-compose.yml  justfile  rust-analyzer.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
docs/: feature-ideas.md
docs/superpowers/plans/: 2026-04-15-engagement-features.md  2026-05-24-deps-upgrade.md
docs/superpowers/specs/: 2026-04-15-engagement-features-design.md  2026-05-24-deps-upgrade-design.md
migrations/2025-10-23-211323_create_initial_schema/: down.sql  up.sql
migrations/2025-10-23-214000_add_user_images/: down.sql  up.sql
migrations/2025-10-29-233829-0000_add_image_uuid/: down.sql  up.sql
migrations/2026-04-16-032654-0000_add_bonus_chore_fields/: down.sql  up.sql
migrations/2026-04-16-035222-0000_create_user_badges/: down.sql  up.sql
migrations/2026-04-26-000000_add_admin_sessions/: up.sql
site/: .gitignore  eslint.config.js  index.html  package.json  setupVitest.ts  tsconfig.json  vite.config.ts
site/.storybook/: main.ts  preview.ts
site/src/: App.test.tsx  App.tsx  types.d.ts
site/src/components/: AdminChoreManagement.stories.tsx  AdminChoreManagement.tsx  AdminChoreManagementRefactored.tsx  AdminCompletionReview.stories.tsx  AdminCompletionReview.tsx  AdminCompletionReviewRefactored.tsx  AdminHomePanel.stories.tsx  AdminHomePanel.tsx  AdminPayoutSystem.stories.tsx  AdminPayoutSystem.tsx  AutoUpdateInput.stories.tsx  AutoUpdateInput.tsx  BonusChoreSection.tsx  Breadcrumb.tsx  ChoreCard.stories.tsx  ChoreCard.tsx  ChoreCompletionDetail.stories.tsx  ChoreCompletionDetail.tsx  ChoreGridHeader.tsx  ChoreRow.tsx  CompletionCard.stories.tsx  CompletionCard.tsx  CreateBonusChoreForm.tsx  CreateChoreForm.stories.tsx  CreateChoreForm.tsx  CreateUserForm.stories.tsx  CreateUserForm.tsx  DayNavigator.stories.tsx  DayNavigator.tsx  LoadingSpinner.stories.tsx  Modal.stories.tsx  Modal.tsx  UserBalance.tsx  UserImage.tsx  UserManagementCard.stories.tsx  UserManagementCard.tsx  UserSelector.stories.tsx  UserSelector.tsx  WeekNavigator.tsx  WeeklyChoreView.stories.tsx  (+2 more)
site/src/graphql/: queries.ts
site/src/hooks/: queries.ts  useAdminChoreManagement.ts  useBalances.ts  useBonusChores.ts  useClient.ts  useClients.ts  useRefetchingMutation.ts  useUserBadges.ts  useUserChores.ts  useWeeklyCompletions.ts
site/src/page/: AdminChoreManagementPage.tsx  AdminCompletionReviewPage.tsx  AdminPayoutSystemPage.tsx  HomePage.tsx  PageTemplate.tsx
site/src/stories/: AdminChoreManagement.stories.tsx  AdminCompletionReview.stories.tsx  AdminHomePanel.stories.tsx  AdminPayoutSystem.stories.tsx  AutoUpdateInput.stories.tsx  Button.stories.ts  Button.stories.tsx  ChoreCard.stories.tsx  ChoreCompletionDetail.stories.tsx  CompletionCard.stories.tsx  CreateChoreForm.stories.tsx  CreateUserForm.stories.tsx  DayNavigator.stories.tsx  Header.stories.ts  LoadingSpinner.stories.tsx  Modal.stories.tsx  Page.stories.ts  UserManagementCard.stories.tsx  UserSelector.stories.tsx  WeeklyChoreView.stories.tsx
site/src/types/: chore.ts
site/src/upgrade-tests/: typescript-surface.test.ts  uuid-surface.test.ts
site/src/utils/: dateUtils.ts  withErrorToast.ts
src/: auth.rs  context.rs  db.rs  graphql.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  test_helpers.rs
src/api/: auth.rs  graphql.rs  images.rs  mod.rs
src/svc/: admin.rs  badge.rs  chore.rs  chore_completion.rs  chore_completion_fix.rs  chore_completion_note.rs  mod.rs  user.rs  user_image.rs
tests/: upgrade_axum_extra.rs  upgrade_jsonwebtoken.rs
ynab-api/: Cargo.toml
ynab-api/src/apis/: accounts_api.rs  budgets_api.rs  categories_api.rs  configuration.rs  mod.rs  months_api.rs  payee_locations_api.rs  payees_api.rs  scheduled_transactions_api.rs  transactions_api.rs  user_api.rs
ynab-api/src/models/: account.rs  account_response.rs  account_response_data.rs  account_type.rs  accounts_response.rs  accounts_response_data.rs  budget_detail.rs  budget_detail_response.rs  budget_detail_response_data.rs  budget_settings.rs  budget_settings_response.rs  budget_settings_response_data.rs  budget_summary.rs  budget_summary_response.rs  budget_summary_response_data.rs  bulk_response.rs  bulk_response_data.rs  bulk_response_data_bulk.rs  bulk_transactions.rs  categories_response.rs  categories_response_data.rs  category.rs  category_group.rs  category_group_with_categories.rs  category_response.rs  category_response_data.rs  currency_format.rs  date_format.rs  (+67 more)
(+5 files in other folders)
