[package]
name = "chore-tracker"
version = "0.1.0"
edition = "2024"
default-run = "chore-tracker"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[dependencies]
anyhow = "1.0.82"
axum-extra = { version = "0.10", features = [
  "cookie",
  "json-deserializer",
  "query",
] }
axum = { version = "0.8", features = ["ws", "http2", "multipart", "macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
diesel = { version = "2.1.6", features = [
  "sqlite",
  "r2d2",
  "uuid",
  "chrono",
  "serde_json",
  "numeric",
] }
dotenvy = "0.15.7"
juniper_axum = { version = "0.2.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4", features = ["graphql-transport-ws"] }
juniper = { version = "0.16", features = ["anyhow", "uuid", "chrono-clock"] }
lazy_static = "1.4"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "compression-zstd",
  "compression-deflate",
  "compression-br",
  "full",
] }
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v7", "fast-rng", "serde"] }
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "multipart",
  "blocking",
  "deflate",
  "gzip",
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "zstd",
] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
tracing = "0.1.41"
axum-embed = "0.1.0"
rust-embed = { version = "8.7.2", features = [
  "axum",
  "axum-ex",
  "compression",
  "debug-embed",
  "tokio",
] }
mime_guess = "2.0.5"
base64 = "0.22.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[package.metadata.lambda.deploy]
memory = 512
timeout = 11
tracing = "active"
env_file = ".env.prod"
include = ["site/build"]
